--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NY viget</title>
-    <script type="text/javascript" src="../jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="jquery-3.6.0.js"></script>
     <link rel="stylesheet" href="master.css">
     <script src='ny.js'></script>
     <script src='jquery-ui/jquery-ui.js'></script>
